<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="20dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccFFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="340dp"
            android:layout_height="78dp"
            android:layout_weight="3"
            android:text="@string/about_title"
            android:textAlignment="center"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="682dp"
            android:layout_height="231dp"
            android:layout_weight="3"
            android:background="@drawable/introduction"
            android:contentDescription="@string/about"
            app:srcCompat="@color/cardview_shadow_end_color"
            tools:srcCompat="@drawable/none" />

        <TextView
            android:id="@+id/about_content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/about_how_to_play"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>