<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/main_background"
    tools:context=".GameActivity"
    android:padding="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccFFFFFF"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/best_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/best_step_title"
            android:text="@string/current_step_title"
            app:layout_constraintEnd_toStartOf="@+id/current_step_textview"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/best_step_title" />

        <RelativeLayout
            android:id="@+id/game_board_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/gameboard_border"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_name_textview">

            <RelativeLayout
                android:id="@+id/game_board"
                android:layout_width="320dp"
                android:layout_height="400dp">

                <ImageView
                    android:id="@+id/zu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="82dp"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="238dp"
                    android:layout_marginEnd="158dp"
                    android:layout_marginRight="158dp"
                    android:layout_marginBottom="82dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/zu" />

                <ImageView
                    android:id="@+id/zu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="162dp"
                    android:layout_marginLeft="162dp"
                    android:layout_marginTop="239dp"
                    android:layout_marginEnd="78dp"
                    android:layout_marginRight="78dp"
                    android:layout_marginBottom="81dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/zu" />

                <ImageView
                    android:id="@+id/zu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="240dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="320dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/zu" />

                <ImageView
                    android:id="@+id/zhangfei1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="240dp"
                    android:layout_marginRight="240dp"
                    android:layout_marginBottom="239dp"
                    android:contentDescription="@string/game_activity_level_name"
                    app:srcCompat="@drawable/zhangfei1" />

                <ImageView
                    android:id="@+id/caocao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="82dp"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="79dp"
                    android:layout_marginRight="79dp"
                    android:layout_marginBottom="241dp"
                    android:contentDescription="@string/game_activity_level_name"
                    app:srcCompat="@drawable/caocao" />

                <ImageView
                    android:id="@+id/zhaoyun1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/zhangfei1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="240dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="240dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/zhaoyun1" />

                <ImageView
                    android:id="@+id/machao1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="162dp"
                    android:layout_marginBottom="77dp"
                    android:contentDescription="@string/game_activity_level_name"
                    app:srcCompat="@drawable/machao1" />

                <ImageView
                    android:id="@+id/guanyu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="82dp"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginEnd="79dp"
                    android:layout_marginRight="79dp"
                    android:layout_marginBottom="161dp"
                    android:contentDescription="@string/game_activity_level_name"
                    app:srcCompat="@drawable/guanyu2" />

                <ImageView
                    android:id="@+id/huangzhong1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="241dp"
                    android:layout_marginLeft="241dp"
                    android:layout_marginTop="161dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="79dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/huangzhong1" />

                <ImageView
                    android:id="@+id/zu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="320dp"
                    android:layout_marginEnd="238dp"
                    android:layout_marginRight="238dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/level_1"
                    app:srcCompat="@drawable/zu" />

                <ImageView
                    android:id="@+id/gameBoard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/game_activity_level_name"
                    app:srcCompat="@color/cardview_shadow_end_color" />
            </RelativeLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/level_name_textview"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game_activity_level_name"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/current_step"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="8dp"
            android:text="@string/current_step_title"
            app:layout_constraintEnd_toStartOf="@+id/current_step_textview"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_step_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/game_board_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_name_textview"
            app:layout_constraintVertical_bias="0.435" />

        <Button
            android:id="@+id/return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:onClick="backToMain"
            android:text="@string/return_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/game_board_border"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toEndOf="@+id/reset_btn" />

        <Button
            android:id="@+id/reset_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:onClick="resetGame"
            android:text="@string/reset_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_board_border"
            app:layout_constraintVertical_bias="0.574"
            tools:layout_editor_absoluteX="77dp" />

        <TextView
            android:id="@+id/best_step_textview"
            android:layout_width="12dp"
            android:layout_height="17dp"
            android:contentDescription="@string/best_step_title"
            android:text="@string/_0"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="103dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
